# raftkv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_election_time.py  bench_throughput.py
src/raftkv/: __init__.py  cli.py  cluster.py
src/raftkv/kv/: __init__.py  client.py  store.py
src/raftkv/raft/: __init__.py  log.py  node.py  rpc.py  types.py
src/raftkv/transport/: __init__.py  codec.py  simulated.py  tcp.py
tests/: test_client.py  test_cluster.py  test_codec.py  test_election.py  test_fault_tolerance.py  test_kv_store.py  test_linearizability.py  test_log.py  test_log_replication.py  test_rpc.py  test_safety.py  test_simulated_network.py  test_tcp_transport.py  test_types.py
