[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raftkv"
version = "0.1.0"
description = "A from-scratch Raft consensus implementation and replicated key-value store"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["raft", "consensus", "distributed-systems", "key-value-store"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff==0.6.9", "black==24.8.0"]

[project.scripts]
raftkv-node = "raftkv.cli:main_node"
raftkv-cli = "raftkv.cli:main_client"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
raftkv = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Every test/benchmark file inserts ../src onto sys.path before importing
# raftkv, since the package isn't necessarily installed when running tests
# directly out of a checkout -- that necessarily puts the raftkv imports
# after a non-import statement, which is exactly what E402 flags.
"tests/*.py" = ["E402"]
"benchmarks/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["raftkv"]
